source/ui/styles/tags.scss
.tags-grid{
  display: grid;
  grid-template-columns: repeat(4, 1fr) [end];
  grid-auto-flow: row;
  grid-auto-rows: auto;
  gap: .5rem;


  .tag-size{
    display: block;
    text-align: right;
  }
  a:hover{
    color: var(--color-secondary-light);
  }
}

@media screen and (max-width: 992px){
  .tags-grid{
    grid-template-columns: 1fr 1fr [end];
    padding: 0 .5rem;
  }
}
@media screen and (max-width:576px){
  .tags-grid{
    grid-template-columns: 1fr [end];
    gap: 1rem;
    padding: 0 1rem;
  }
}

.tag-preview-block{
  margin: 0;
  padding: .5rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;


  @include card-background-style();

  >.tag-name{
    text-decoration: none !important;
    font-weight: bold;
    margin: .25rem 0;
    display: flex;
    flex-wrap: nowrap;
    > *:first-child{
      white-space: nowrap;
      overflow: hidden;
      text-overflow: clip;
      min-width: 0;
      flex-grow: 1;
    }
  }

  > .tag-preview-line{
    display: flex;
    gap: 0;
    perspective: 600px;
    padding-bottom: 4px;
    align-items: center;
    justify-content: flex-start;
    
    > .tag-thumb-anchor {
      position: relative;
      width: 30%;
      flex-shrink: 0;
      display: block;
      // Transforms to make thumbnails atop each other
      border: 1px solid var(--color-element);
      border-radius: 4px;
      transition: transform .2s ease, box-shadow .2s ease;
      transform-origin: left center;
      transform: rotateY(25deg);
      margin-left: -18%;
      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.35);
      &:first-child{
        margin-left: 0;
      }
      &:hover{
        transform: rotateY(0deg);
        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.45);
        border-color: var(--color-highlight2);
        z-index: 10;
      }
      > img, >svg{
        display: block;
        max-width: 100%;
        height: auto;
        border-radius: 4px;
      }
    }

    //Make the animation more subtle for lower thumb count
    &:has(> .tag-thumb-anchor:nth-child(3)) {
      > .tag-thumb-anchor:hover ~ .tag-thumb-anchor {
        transform: translateX(30%) rotateY(25deg);
      }
    }
    &:has(> .tag-thumb-anchor:nth-child(4)) {
      > .tag-thumb-anchor:hover ~ .tag-thumb-anchor {
        transform: translateX(60%) rotateY(25deg);
      }
    }
    &:has(> .tag-thumb-anchor:hover){
      > .tag-thumb-anchor:not(:hover){
        filter: saturate(0.5) brightness(0.7) grayscale(0.3);
        box-shadow: none;
      }
    }

    > .tag-more{
      z-index: 11;
      flex-grow: 1;
      text-align: end;
      text-decoration: none;
    }
  }
}

